--- a/app/assets/scss/components/_global-header.scss
+++ b/app/assets/scss/components/_global-header.scss
@@ -98,11 +98,11 @@
     padding-top: 2px;
     border-bottom: 1px solid transparent;
 
-    background: image-url("images/gov.uk_logotype_crown.png") no-repeat;
+    background: file-url("images/gov.uk_logotype_crown.png") no-repeat;
     background-size: 35px 31px;
     background-position: 0 0;
     @include ie-lte(8) {
-      background-image: image-url("images/gov.uk_logotype_crown-1x.png");
+      background-image: file-url("images/gov.uk_logotype_crown-1x.png");
     }
 
     img {
