--- a/app/assets/scss/components/_global-footer.scss
+++ b/app/assets/scss/components/_global-footer.scss
@@ -109,9 +109,9 @@
             height: 17px;
             overflow: hidden;
             text-indent: -999em;
-            background: file-url("images/template/open-government-licence.png") 0 0 no-repeat;
+            background: file-url("template/open-government-licence.png") 0 0 no-repeat;
             @include device-pixel-ratio {
-              background-image: file-url("images/template/open-government-licence_2x.png");
+              background-image: file-url("template/open-government-licence_2x.png");
               background-size: 41px 17px;
             }
           }
@@ -149,7 +149,7 @@
       a {
         display: block;
 
-        background-image: file-url("images/template/govuk-crest.png");
+        background-image: file-url("template/govuk-crest.png");
         background-repeat: no-repeat;
         background-position: 50% 0%;
 
@@ -158,12 +158,12 @@
         }
 
         @include device-pixel-ratio {
-          background-image: file-url("images/template/govuk-crest-2x.png");
+          background-image: file-url("template/govuk-crest-2x.png");
           background-size: 125px 102px;
         }
 
         @include ie(6) {
-          background-image: file-url("images/template/govuk-crest-ie.png");
+          background-image: file-url("template/govuk-crest-ie.png");
         }
 
         text-align: center;
